fix spacing issue

--- a/styles/place.css
+++ b/styles/place.css
@@ -26,6 +26,10 @@ header h1 {
     font-size: 30pt;
 }
 
+picture {
+    display: flex;
+}
+
 #hero-image {
     width: 100%;
     height: auto;
